have multiple boxes showing - have top left and bottom right container opposite each other

--- a/index.html
+++ b/index.html
@@ -10,8 +10,28 @@
   </head>
   <body>
     <div id="main">
-      <h1 id="djName" class="djText">SLKT</h1>
-      <p id="djInstaHandle" class="djText">@slkt.nyc</p>
+      <div id="topRow" class="row">
+        <div id="topLeftContainer" class="djContainer">
+          <h1 id="djNameTopLeft" class="djName">SLKT</h1>
+        </div>
+        <div id="topCenterContainer" class="djContainer">
+          <h1 id="djNameTopCenter" class="djName">SLKT</h1>
+        </div>
+        <div id="topRightContainer" class="djContainer">
+          <h1 id="djNameTopRight" class="djName">SLKT</h1>
+        </div>
+      </div>
+      <div id="bottomRow" class="row">
+        <div id="bottomLeftContainer" class="djContainer">
+          <h1 id="djNameBottomLeft" class="djName">SLKT</h1>
+        </div>
+        <div id="bottomCenterContainer" class="djContainer">
+          <h1 id="djNameBottomCenter" class="djName">SLKT</h1>
+        </div>
+        <div id="bottomRightContainer" class="djContainer">
+          <h1 id="djNameBottomRight" class="djName">SLKT</h1>
+        </div>
+      </div>
     </div>
   </body>
 </html>
