now have multple windows working with instsagram handles - everything working perfectly

--- a/index.html
+++ b/index.html
@@ -12,24 +12,30 @@
     <div id="main">
       <div id="topRow" class="row">
         <div id="topLeftContainer" class="djContainer">
-          <h1 id="djNameTopLeft" class="djName">SLKT</h1>
+          <h1 class="djName djTextTopLeft">SLKT</h1>
+          <p class="djInstaHandle djTextTopLeft">@slkt.nyc</p>
         </div>
         <div id="topCenterContainer" class="djContainer">
-          <h1 id="djNameTopCenter" class="djName">SLKT</h1>
+          <h1 class="djName djTextTopCenter">SLKT</h1>
+          <p class="djInstaHandle djTextTopCenter">@slkt.nyc</p>
         </div>
         <div id="topRightContainer" class="djContainer">
-          <h1 id="djNameTopRight" class="djName">SLKT</h1>
+          <h1 class="djName djTextTopRight">SLKT</h1>
+          <p class="djInstaHandle djTextTopRight">@slkt.nyc</p>
         </div>
       </div>
       <div id="bottomRow" class="row">
         <div id="bottomLeftContainer" class="djContainer">
-          <h1 id="djNameBottomLeft" class="djName">SLKT</h1>
+          <h1 class="djName djTextBottomLeft">SLKT</h1>
+          <p class="djInstaHandle djTextBottomLeft">@slkt.nyc</p>
         </div>
         <div id="bottomCenterContainer" class="djContainer">
-          <h1 id="djNameBottomCenter" class="djName">SLKT</h1>
+          <h1 class="djName djTextBottomCenter">SLKT</h1>
+          <p class="djInstaHandle djTextBottomCenter">@slkt.nyc</p>
         </div>
         <div id="bottomRightContainer" class="djContainer">
-          <h1 id="djNameBottomRight" class="djName">SLKT</h1>
+          <h1 class="djName djTextBottomRight">SLKT</h1>
+          <p class="djInstaHandle djTextBottomRight">@slkt.nyc</p>
         </div>
       </div>
     </div>
